2020-09-23  Youenn Fablet  <youenn@apple.com>

        Add support for HTMLMediaElement.setSinkId
        https://bugs.webkit.org/show_bug.cgi?id=216696

        Reviewed by Eric Carlson.

        Skip new tests on WK1 since mediaDevices is not implemented in WK1.

        * http/wpt/audio-output/setSinkId.https-expected.txt: Added.
        * http/wpt/audio-output/setSinkId.https.html: Added.
        * platform/mac-wk1/TestExpectations:
        * platform/win/TestExpectations:

2020-09-23  Philippe Normand  <pnormand@igalia.com>

        REGRESSION(r267383): fast/mediastream/getUserMedia-webaudio.html is failing
        https://bugs.webkit.org/show_bug.cgi?id=216813

        Reviewed by Adrian Perez de Castro.

        Unflag passing tests.

        * platform/glib/TestExpectations:
        * platform/glib/webaudio/Analyser/realtimeanalyser-fftsize-reset-expected.txt:
        * platform/glib/webaudio/Analyser/realtimeanalyser-freq-data-expected.txt: Added. There's
        still a FAIL test there though.
        * platform/glib/webaudio/Analyser/realtimeanalyser-multiple-calls-expected.txt:

2020-09-23  Diego Pino Garcia  <dpino@igalia.com>

        [GLIB] Unreviewed test gardening. Garden more failures in webaudio and webrtc tests.

        * platform/glib/TestExpectations:
        * platform/gtk/TestExpectations:

2020-09-23  Diego Pino Garcia  <dpino@igalia.com>

        [GLIB] Unreviewed test gardening. Remove specific baseline for webaudio/BiquadFilter/tail-time-lowpass.html

        The baseline became redudant after r267444.

        * platform/glib/webaudio/BiquadFilter/tail-time-lowpass-expected.txt: Removed.

2020-09-22  Lauro Moura  <lmoura@igalia.com>

        [GLIB] Gardening some tests

        Unreviewed test gardening.

        * platform/glib/TestExpectations:
        * platform/gtk/TestExpectations:

2020-09-22  Chris Dumez  <cdumez@apple.com>

        Slightly improve AudioBufferSourceNode resampling